# analytics

./: Darcy_Dataless_trainer.py  Darcy_Dataless_trainer_constant.py  Darcy_Generators.py  Darcy_generator.py  Darcy_trainer.py  Generators_Darcy.py  PINNs_Darcy.py  README.md  Taskfile.yml  engine.py  main.py  pyproject.toml  solver.py  test_Darcy_Generator.py  test_Generators.py  test_Generators_Darcy.py
src/: engine.py
src/AI/: neural_networks.py  nn_factory.py  trainer.py
src/AI/PDEs/: Darcy_nn_factories.py  Darcy_trainers.py
src/FEM_solvers/: FEM_solver.py
src/diagnostic_tools/: plotting.py
src/formulations/: formulation.py
src/formulations/PDEs/: Darcy.py
src/generators/: Darcy_generator.py
src/hp_tuning/: hp_tuning.py
src/plotting/: plotting.py
src/trainers/: Darcy_dual_trainer.py  Darcy_trainer.py  trainer.py
src/trainers/PDEs/: Darcy_trainers.py
test/: test_Darcy_generator.py
