[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "darcy-analytics"
version = "0.1.0"
description = "Training and hyperparameter tuning workflows for Darcy flow neural surrogates."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Analytics Team" }]
dependencies = [
    "torch>=2.1",
    "numpy>=1.24",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "scikit-learn>=1.3",
    "ray[tune]>=2.9",
    "fenics>=2019.1.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true
